--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/core": "~12.1.0",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.0",
+    "@angular/localize": "~12.1.0",
     "@angular/material": "^12.2.2",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.3",
     "google-libphonenumber": "^3.2.22",
     "intl-tel-input": "^17.0.3",
